Implement async HTTP approver with webhook support and enhance configuration options

--- a/configs/github_secrets_postgres_k8s.yaml
+++ b/configs/github_secrets_postgres_k8s.yaml
@@ -26,6 +26,7 @@ server:
     idle_timeout: "1h"
     session_timeout: "5m"
     stateless: false
+  approval_webhook_url: '{{ env "YAML_MCP_APPROVAL_WEBHOOK_URL" }}'
 
 tools:
   - name: github_create_env_secret_k8s
@@ -113,6 +114,8 @@ tools:
       - type: http
         timeout: "1h"
         url: '{{ env "YAML_MCP_APPROVER_URL" }}'
+        async: true
+        markup: "markdown"
     executor:
       type: shell
       timeout: "1h"
@@ -232,6 +235,8 @@ tools:
       - type: http
         timeout: "1h"
         url: '{{ env "YAML_MCP_APPROVER_URL" }}'
+        async: true
+        markup: "markdown"
     executor:
       type: shell
       timeout: "1h"
