--- a/configs/github_secrets_postgres_k8s.yaml
+++ b/configs/github_secrets_postgres_k8s.yaml
@@ -327,3 +327,13 @@ tools:
         fi
         kubectl -n {{ "{{ .Args.namespace }}" }} exec "$pod" -- env PGPASSWORD="$pg_password" psql -U "$pg_user" -v ON_ERROR_STOP=1 -c "CREATE DATABASE \"{{ "{{ .Args.db_name }}" }}\" OWNER \"$pg_user\";"
         echo "database {{ "{{ .Args.db_name }}" }} created in namespace {{ "{{ .Args.namespace }}" }}"
+
+resources:
+  - name: GithubSecretsPostgresK8s
+    uri: static:github-secrets-postgres-k8s
+    description: Toolset overview
+    mime_type: text/plain
+    text: |
+      Available tools:
+      - github_create_env_secret_k8s
+      - k8s_create_postgres_db
