--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -9,6 +9,7 @@ on:
 
 permissions:
   contents: read
+  packages: write
 
 jobs:
   publish:
@@ -25,8 +26,7 @@ jobs:
             extra_build_args: |
               KUBECTL_VERSION=v1.34.1
     env:
-      DOCKERHUB_USERNAME: ${{ secrets.DOCKERHUB_USERNAME }}
-      DOCKERHUB_NAMESPACE: ${{ vars.DOCKERHUB_NAMESPACE }}
+      GHCR_OWNER: ${{ vars.GHCR_OWNER }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -35,12 +35,8 @@ jobs:
         id: meta
         run: |
           set -euo pipefail
-          if [ -z "${DOCKERHUB_USERNAME}" ]; then
-            echo "DOCKERHUB_USERNAME secret is required" >&2
-            exit 1
-          fi
-
-          namespace="${DOCKERHUB_NAMESPACE:-$DOCKERHUB_USERNAME}"
+          namespace="${GHCR_OWNER:-$GITHUB_REPOSITORY_OWNER}"
+          namespace="$(echo "${namespace}" | tr '[:upper:]' '[:lower:]')"
           if [ "${GITHUB_REF_TYPE}" = "tag" ]; then
             image_tag="${GITHUB_REF_NAME}"
             source_version="${GITHUB_REF_NAME}"
@@ -56,11 +52,12 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
-      - name: Login to Docker Hub
+      - name: Login to GHCR
         uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Build and push
         uses: docker/build-push-action@v6
@@ -68,7 +65,7 @@ jobs:
           context: .
           file: ${{ matrix.dockerfile }}
           push: true
-          tags: ${{ steps.meta.outputs.namespace }}/${{ matrix.image }}:${{ steps.meta.outputs.image_tag }}
+          tags: ghcr.io/${{ steps.meta.outputs.namespace }}/${{ matrix.image }}:${{ steps.meta.outputs.image_tag }}
           build-args: |
             GOLANG_IMAGE_VERSION=1.25.6-bookworm
             YAML_MCP_SERVER_VERSION=${{ steps.meta.outputs.source_version }}
